[package]
name = "vyper-otc"
version = "0.1.0"
description = "vyper-otc application built on vyper-core"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vyper_otc"

[features]
env-log = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["env-log"]

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
vyper-core = { path = "../../deps/vyper-core/programs/vyper-core", features = ["cpi"] }